Icono de la app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Tu Geografia, Estados y Capitales de México</string>
+    <string name="app_name">Tu Geografía, Estados y Capitales de México</string>
 </resources>
